# Yalla_Business_API

./: README.md  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.txt
templates/: base.html
yalla_business/: asgi.py  settings.py  urls.py  wsgi.py
yalla_business_api/: asgi.py  settings.py  urls.py  wsgi.py
yalla_business_app/: admin.py  apps.py  models.py  serializer.py  serializers.py  urls.py  views.py
yalla_business_app/migrations/: 0001_initial.py  0002_auto_20201018_1930.py  0002_store.py  0002_store_store_description.py  0003_store_catagories.py  0003_user_profile.py  0004_auto_20201014_1614.py  0004_auto_20201019_1244.py  0005_review.py  0006_auto_20201014_1645.py  0007_auto_20201014_1702.py
yalla_business_app/templates/: details.html
